# qxgpt

./: Makefile  README.md  data.csv  data_prepared.jsonl  pyproject.toml  requirements.txt
apps/: hello_qxg.py
qxg/: log.py  secrets.py
